lijst toegevoegd en gestyled

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Mijn eerste project</title>
 </head>
 <body>
+<h1>Wat een prachtige pagina </h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto corporis quas tempore. A, autem cupiditate ducimus ea error expedita facere fuga ipsa nihil, omnis perspiciatis quaerat similique veniam vero voluptate!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque deleniti doloremque dolores eaque eius eos et expedita fugiat illo in itaque necessitatibus odio officiis omnis, similique temporibus, velit voluptate, voluptatem.</p>
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>item 3</li>
+</ul>
 
 </body>
-</html>
+< /html>
